--- a/PAGINA WEB/css/responsive.css
+++ b/PAGINA WEB/css/responsive.css
@@ -32,7 +32,7 @@
     .navbar-toggler-icon {
         background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(0, 0, 0, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
     }
-    #mosh-navbar {
+    #matilau-navbar {
         padding: 30px;
         border-radius: 5px;
         background-color: #211b31;
@@ -72,7 +72,7 @@
                 flex: 0 0 50%;
         max-width: 50%;
     }
-    .mosh-more-services-area {
+    .matilau-more-services-area {
         -ms-flex-wrap: wrap;
             flex-wrap: wrap;
     }
@@ -86,7 +86,7 @@
     .testimonial-content p {
         font-size: 13px;
     }
-    .mosh-cool-facts-area .counter-area > h3 {
+    .matilau-cool-facts-area .counter-area > h3 {
         font-size: 40px;
     }
 }
@@ -107,7 +107,7 @@
     .navbar-toggler-icon {
         background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(0, 0, 0, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
     }
-    #mosh-navbar {
+    #matilau-navbar {
         padding: 30px;
         border-radius: 5px;
         background-color: #211b31;
@@ -166,7 +166,7 @@
                 flex: 0 0 100%;
         max-width: 100%;
     }
-    .mosh-more-services-area {
+    .matilau-more-services-area {
         -ms-flex-wrap: wrap;
             flex-wrap: wrap;
     }
@@ -180,10 +180,10 @@
     .cta-content .section-heading h2 {
         font-size: 24px;
     }
-    .mosh-service-slides .owl-prev {
+    .matilau-service-slides .owl-prev {
         left: -15px;
     }
-    .mosh-service-slides .owl-next {
+    .matilau-service-slides .owl-next {
         left: auto;
         right: -15px;
     }
@@ -195,10 +195,10 @@
     .bradcumbContent h2 {
         font-size: 40px;
     }
-    .mosh-about-us-thumb {
+    .matilau-about-us-thumb {
         margin-top: 100px;
     }
-    .mosh-features-thumb {
+    .matilau-features-thumb {
         margin-bottom: 100px;
     }
     .few-words-contents,
@@ -209,10 +209,10 @@
         max-width: 100%;
         height: 770px;
     }
-    .mosh-team-slides .owl-prev {
+    .matilau-team-slides .owl-prev {
         left: -10px;
     }
-    .mosh-team-slides .owl-next {
+    .matilau-team-slides .owl-next {
         left: auto;
         right: -10px;
     }
@@ -237,7 +237,7 @@
     .testimonial-content p {
         font-size: 13px;
     }
-    .mosh-cool-facts-area .counter-area > h3 {
+    .matilau-cool-facts-area .counter-area > h3 {
         font-size: 20px;
     }
     .testimonials-slides:after {
@@ -246,7 +246,7 @@
     .testimonials-slides:before {
         text-align: left;
     }
-    .mosh-blog-sidebar,
+    .matilau-blog-sidebar,
     .contact-information {
         margin-top: 100px;
     }
