--- a/PAGINA WEB/style.css
+++ b/PAGINA WEB/style.css
@@ -207,7 +207,7 @@ img {
 
 #preloader {
     overflow: hidden;
-    background-color: #211b31;
+    background-color: black;
     height: 100%;
     left: 0;
     position: fixed;
@@ -218,10 +218,10 @@ img {
 
 .matilau-preloader {
     overflow: hidden;
-    -webkit-animation: 3000ms linear 0s normal none infinite running matilau-preloader;
+    animation: 3000ms linear 0s normal none infinite running matilau-preloader;
     animation: 3000ms linear 0s normal none infinite running matilau-preloader;
     background-color: transparent;
-    border-color: #f1f2f3 #f1f2f3 #4a7aec;
+    border-color: darkorange darkorange black black;
     border-radius: 50%;
     border-style: solid;
     border-width: 4px;
@@ -235,22 +235,22 @@ img {
 
 @-webkit-keyframes matilau-preloader {
     0% {
-        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
         transform: rotate(0deg);
     }
     100% {
-        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
         transform: rotate(360deg);
     }
 }
 
 @keyframes matilau-preloader {
     0% {
-        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
         transform: rotate(0deg);
     }
     100% {
-        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
         transform: rotate(360deg);
     }
 }
@@ -349,7 +349,7 @@ img {
 }
 
 .bg-overlay-white:after {
-    background-color: rgba(231, 235, 246, 0.89);
+    background-color: rgba(230, 230, 230, 0.9);
 }
 
 .bg-img {
@@ -359,7 +359,7 @@ img {
 }
 
 /* --------------------------
-:: 2.0 Header Area CSS
+:: Area del Header
 -------------------------- */
 
 .header_area {
@@ -370,9 +370,8 @@ img {
     top: 0;
     padding: 0 15px;
     height: 120px;
-    background-color: transparent;
-    -webkit-transition-duration: 700ms;
-    transition-duration: 700ms;
+    background: linear-gradient(to bottom, rgba(255, 140, 0, 0.5), transparent) ;
+    transition-duration: 300ms;
 }
 
 .menu_area {
@@ -381,48 +380,28 @@ img {
 }
 
 .menu_area #nav .nav-link {
-    color: #fff;
+    color: silver;
     display: block;
-    font-size: 15px;
-    -webkit-transition-duration: 500ms;
+    font-size: 20px;
     transition-duration: 500ms;
     padding: 0 15px;
 }
 
 .menu_area .dropdown-menu.show {
     border: none;
-    box-shadow: 3px 5px 12px rgba(0, 0, 0, 0.15);
+    background: black;
+    box-shadow: 0px 0px 10px darkorange;
 }
 
 .menu_area .dropdown-item {
-    font-size: 14px;
+    font-size: 15px;
     font-weight: 700;
-    color: #9597a6;
+    color: silver;
 }
-
-.menu_area #nav .nav-link:hover,
-.menu_area #nav .nav-item.active .nav-link,
-.menu_area .dropdown-item:hover {
-    color: #4a7aec;
-}
-
-.login-register-btn a {
-    color: #4a7aec;
-    display: inline-block;
-    font-weight: 500;
-}
-
-.login-register-btn a:hover {
-    color: #fff;
-}
-
-.search-button > a {
-    margin: 0 80px;
-}
-
-.navbar-nav {
-    -webkit-transition-duration: 500ms;
-    transition-duration: 500ms;
+.menu_area .dropdown-item:hover{
+    color:black;
+    text-decoration:none;
+    background-color:  rgba(255, 140, 0, 0.5);
 }
 
 /* Search Form CSS */
@@ -459,8 +438,8 @@ img {
 /* Sticky CSS */
 
 .header_area.sticky {
-    background-color: #25499f;
-    box-shadow: 0 6px 20px rgba(0, 0, 0, 0.15);
+    background-color: black;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.7);
     height: 80px;
     position: fixed;
     top: 0;
@@ -931,7 +910,7 @@ span.accor-open {
 .footer-area {
     position: relative;
     z-index: 1;
-    background-color: #211b31;
+    background-color: darkorange;
 }
 
 .single-footer-widget h5 {
@@ -1002,7 +981,7 @@ span.accor-open {
 }
 
 .footer-bottom-area {
-    background-color: #191426;
+    background: linear-gradient(black, darkorange);
     height: 60px;
 }
 
@@ -1469,7 +1448,7 @@ span.accor-open {
 
 .matilau-cool-facts-area.service-page .counter-area h3,
 .matilau-cool-facts-area.service-page .cool-facts-content p {
-    color: #fff;
+    color: silver;
 }
 
 .skills-text > p {
