--- a/PAGINA WEB/css/style.css
+++ b/PAGINA WEB/css/style.css
@@ -1029,6 +1029,10 @@ span.accor-open {
     margin-bottom: 50px;
 }
 
+.matilau-about-us-area {
+    margin-bottom: 100px;
+}
+
 .few-words-contents,
 .few-words-thumb {
     -webkit-box-flex: 0;
